--- a/AMPS/res/layout/activity_home.xml
+++ b/AMPS/res/layout/activity_home.xml
@@ -1,76 +1,55 @@
-<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     tools:context=".HomeActivity" >
-
-    <TableRow
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" >
-
-        <TextView
-            android:id="@+id/textViewWelcome"
-            android:layout_height="wrap_content"
-            android:text="@string/welcome" />
-    </TableRow>
-
-    <!-- <TableRow
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" >
-
-        <Spinner
-            android:id="@+id/spinnerProjects"
-            android:layout_width="0px"
-            android:layout_weight="0.7" />
-
-        <Button
-            android:id="@+id/buttonView"
-            android:layout_width="0px"
-            android:layout_weight="0.3"
-            android:onClick="onClick"
-            android:text="@string/view" />
-    </TableRow> -->
-
-    <TableRow
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" >
-
-        <TextView
-            android:id="@+id/textViewNews"
-            android:layout_gravity="left|top"
-            android:text="@string/news" />
-    </TableRow>
 
     <TableLayout
         android:layout_width="match_parent"
-        android:layout_height="fill_parent"
+        android:layout_height="wrap_content"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin" >
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
-
-            <ImageView
-                android:id="@+id/imageView1"
-                android:layout_width="0px"
-                android:layout_gravity="left|top"
-                android:layout_weight="0.3"
-                android:contentDescription="newyear"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                android:src="@drawable/newyear" />
+        <LinearLayout android:orientation="vertical" >
 
             <TextView
-                android:id="@+id/textView1"
-                android:layout_width="0px"
-                android:layout_gravity="left|top"
-                android:layout_weight="0.7"
-                android:maxLines="4"
-                android:text="@string/headline1" />
-        </TableRow>
+                android:id="@+id/textViewNews"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:text="@string/news"
+                android:textAppearance="?android:attr/textAppearanceLarge" />
+        </LinearLayout>
+
+        <TableLayout
+            android:layout_width="match_parent"
+            android:layout_height="fill_parent"
+            android:paddingTop="@dimen/activity_vertical_margin" >
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" >
+
+                <ImageView
+                    android:id="@+id/imageView1"
+                    android:layout_width="0px"
+                    android:layout_gravity="left|top"
+                    android:layout_weight="0.3"
+                    android:contentDescription="newyear"
+                    android:paddingRight="@dimen/activity_horizontal_margin"
+                    android:src="@drawable/newyear" />
+
+                <TextView
+                    android:id="@+id/textView1"
+                    android:layout_width="0px"
+                    android:layout_gravity="left|top"
+                    android:layout_weight="0.7"
+                    android:maxLines="4"
+                    android:text="@string/headline1" />
+            </TableRow>
+        </TableLayout>
     </TableLayout>
 
-</TableLayout>
+</ScrollView>
