--- a/AMPS/res/layout/activity_login.xml
+++ b/AMPS/res/layout/activity_login.xml
@@ -7,25 +7,28 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:shrinkColumns="*"
-    android:stretchColumns="*"
     tools:context=".LoginActivity" >
 
-    <TableRow>
+    <LinearLayout
+            android:orientation="vertical" >
 
         <TextView
             android:id="@+id/textViewAMPS"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="@string/app_name" />
+            android:layout_gravity="center_horizontal"
+            android:text="@string/app_name"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
 
-    </TableRow>
+    </LinearLayout>
 
     <TableRow>
 
         <EditText
             android:id="@+id/editTextUsername"
+            android:layout_width="0px"
+            android:layout_gravity="center"
+            android:layout_weight="1"
             android:ems="10"
             android:hint="@string/username" />
     </TableRow>
@@ -34,6 +37,9 @@
 
         <EditText
             android:id="@+id/editTextPassword"
+            android:layout_width="0px"
+            android:layout_gravity="center"
+            android:layout_weight="1"
             android:ems="10"
             android:hint="@string/password"
             android:inputType="textPassword" />
@@ -43,14 +49,19 @@
 
         <Button
             android:id="@+id/buttonLogin"
+            android:layout_width="0px"
+            android:layout_gravity="center"
+            android:layout_weight="0.5"
+            android:background="?android:attr/selectableItemBackground"
             android:onClick="onClick"
             android:text="@string/button_login" />
-    </TableRow>
-
-    <TableRow>
 
         <Button
             android:id="@+id/buttonCancel"
+            android:layout_width="0px"
+            android:layout_gravity="center"
+            android:layout_weight="0.5"
+            android:background="?android:attr/selectableItemBackground"
             android:text="@string/button_cancel" />
     </TableRow>
 
