--- a/AMPS/res/layout/fragment_profile_account.xml
+++ b/AMPS/res/layout/fragment_profile_account.xml
@@ -1,186 +1,234 @@
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:columnCount="3"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     tools:context=".ProfileAccountFragment" >
 
-    <TextView
-        android:id="@+id/textViewUsername"
-        android:layout_column="0"
-        android:layout_columnSpan="1"
-        android:layout_gravity="center_vertical|left"
-        android:layout_row="1"
-        android:text="@string/username" />
-
-    <EditText
-        android:id="@+id/editTextUsername"
-        android:layout_column="1"
-        android:layout_columnSpan="2"
-        android:layout_gravity="fill_horizontal"
-        android:layout_row="1"
-        android:ems="10"
-        android:inputType="text" />
-
-    <TextView
-        android:id="@+id/textViewDisplayName"
-        android:layout_column="0"
-        android:layout_columnSpan="1"
-        android:layout_gravity="center_vertical|left"
-        android:layout_row="2"
-        android:text="@string/displayname" />
-
-    <EditText
-        android:id="@+id/editTextDisplayName"
-        android:layout_column="1"
-        android:layout_columnSpan="2"
-        android:layout_gravity="fill_horizontal"
-        android:layout_row="2"
-        android:ems="10"
-        android:inputType="text" />
-
-    <TextView
-        android:id="@+id/textViewFirstName"
-        android:layout_column="0"
-        android:layout_columnSpan="1"
-        android:layout_gravity="center_vertical|left"
-        android:layout_row="3"
-        android:text="@string/firstname" />
-
-    <EditText
-        android:id="@+id/editTextFirstName"
-        android:layout_column="1"
-        android:layout_columnSpan="2"
-        android:layout_gravity="fill_horizontal"
-        android:layout_row="3"
-        android:ems="10"
-        android:inputType="textPersonName" />
-
-    <TextView
-        android:id="@+id/textViewLastName"
-        android:layout_column="0"
-        android:layout_columnSpan="1"
-        android:layout_gravity="center_vertical|left"
-        android:layout_row="4"
-        android:text="@string/lastname" />
-
-    <EditText
-        android:id="@+id/editTextLastName"
-        android:layout_column="1"
-        android:layout_columnSpan="2"
-        android:layout_gravity="fill_horizontal"
-        android:layout_row="4"
-        android:ems="10"
-        android:inputType="textPersonName" />
-
-    <TextView
-        android:id="@+id/textViewEmail"
-        android:layout_column="0"
-        android:layout_columnSpan="1"
-        android:layout_gravity="center_vertical|left"
-        android:layout_row="5"
-        android:text="@string/email" />
-
-    <EditText
-        android:id="@+id/editTextEmail"
-        android:layout_column="1"
-        android:layout_columnSpan="2"
-        android:layout_gravity="fill_horizontal"
-        android:layout_row="5"
-        android:ems="10"
-        android:inputType="textEmailAddress" />
-
-    <TextView
-        android:id="@+id/textViewTitle"
-        android:layout_column="0"
-        android:layout_columnSpan="1"
-        android:layout_gravity="center_vertical|left"
-        android:layout_row="6"
-        android:text="@string/title" />
-
-    <Spinner
-        android:id="@+id/spinnerTitle"
-        android:layout_width="310dp"
-        android:layout_column="1"
-        android:layout_columnSpan="2"
-        android:layout_gravity="left|top"
-        android:layout_row="6" />
-
-    <TextView
-        android:id="@+id/textViewGender"
-        android:layout_column="0"
-        android:layout_columnSpan="1"
-        android:layout_gravity="center_vertical|left"
-        android:layout_row="7"
-        android:text="@string/gender" />
-
-    <Spinner
-        android:id="@+id/spinnerGender"
-        android:layout_width="310dp"
-        android:layout_column="1"
-        android:layout_columnSpan="2"
-        android:layout_gravity="left|top"
-        android:layout_row="7" />
-
-    <TextView
-        android:id="@+id/textViewBirthDate"
-        android:layout_column="0"
-        android:layout_columnSpan="1"
-        android:layout_gravity="center_vertical|left"
-        android:layout_row="8"
-        android:text="@string/birthdate" />
-
-    <EditText
-        android:id="@+id/editTextBirthDate"
-        android:layout_column="1"
-        android:layout_columnSpan="2"
-        android:layout_gravity="fill_horizontal|left|top"
-        android:layout_row="8"
-        android:ems="10"
-        android:inputType="date" />
-
-    <TextView
-        android:id="@+id/textViewIC"
-        android:layout_column="0"
-        android:layout_columnSpan="1"
-        android:layout_gravity="center_vertical|left"
-        android:layout_row="9"
-        android:text="@string/ic" />
-
-    <EditText
-        android:id="@+id/editTextIC"
-        android:layout_column="1"
-        android:layout_columnSpan="2"
-        android:layout_gravity="fill_horizontal|left|top"
-        android:layout_row="9"
-        android:ems="10"
-        android:inputType="text" />
-
-    <Button
-        android:id="@+id/buttonUpdate"
+    <TableLayout
         android:layout_width="match_parent"
-        android:layout_column="0"
-        android:layout_columnSpan="3"
-        android:layout_gravity="top"
-        android:layout_row="10"
-        android:onClick="onClick"
-        android:text="@string/update" >
+        android:layout_height="wrap_content"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin" >
 
-        <requestFocus />
-    </Button>
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
 
-    <Button
-        android:id="@+id/buttonCancel"
-        android:layout_width="match_parent"
-        android:layout_column="0"
-        android:layout_columnSpan="3"
-        android:layout_gravity="top"
-        android:layout_row="11"
-        android:onClick="onClick"
-        android:text="@string/cancel" />
+            <TextView
+                android:id="@+id/textViewUsername"
+                android:layout_width="0px"
+                android:layout_gravity="center_vertical|left"
+                android:layout_weight="0.3"
+                android:text="@string/username" />
 
-</GridLayout>
+            <EditText
+                android:id="@+id/editTextUsername"
+                android:layout_width="0px"
+                android:layout_gravity="center_vertical|fill_horizontal"
+                android:layout_weight="0.7"
+                android:ems="10"
+                android:inputType="text" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+
+            <TextView
+                android:id="@+id/textViewDisplayName"
+                android:layout_width="0px"
+                android:layout_gravity="center_vertical|left"
+                android:layout_weight="0.3"
+                android:text="@string/displayname" />
+
+            <EditText
+                android:id="@+id/editTextDisplayName"
+                android:layout_width="0px"
+                android:layout_gravity="center_vertical|fill_horizontal"
+                android:layout_weight="0.7"
+                android:ems="10"
+                android:inputType="text" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+
+            <TextView
+                android:id="@+id/textViewFirstName"
+                android:layout_width="0px"
+                android:layout_gravity="center_vertical|left"
+                android:layout_weight="0.3"
+                android:text="@string/firstname" />
+
+            <EditText
+                android:id="@+id/editTextFirstName"
+                android:layout_width="0px"
+                android:layout_gravity="center_vertical|fill_horizontal"
+                android:layout_weight="0.7"
+                android:ems="10"
+                android:inputType="textPersonName" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+
+            <TextView
+                android:id="@+id/textViewLastName"
+                android:layout_width="0px"
+                android:layout_gravity="center_vertical|left"
+                android:layout_weight="0.3"
+                android:text="@string/lastname" />
+
+            <EditText
+                android:id="@+id/editTextLastName"
+                android:layout_width="0px"
+                android:layout_gravity="center_vertical|fill_horizontal"
+                android:layout_weight="0.7"
+                android:ems="10"
+                android:inputType="textPersonName" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+
+            <TextView
+                android:id="@+id/textViewEmail"
+                android:layout_width="0px"
+                android:layout_gravity="center_vertical|left"
+                android:layout_weight="0.3"
+                android:text="@string/email" />
+
+            <EditText
+                android:id="@+id/editTextEmail"
+                android:layout_width="0px"
+                android:layout_gravity="center_vertical|fill_horizontal"
+                android:layout_weight="0.7"
+                android:ems="10"
+                android:inputType="textEmailAddress" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+
+            <TextView
+                android:id="@+id/textViewTitle"
+                android:layout_width="0px"
+                android:layout_gravity="center_vertical|left"
+                android:layout_weight="0.3"
+                android:text="@string/title" />
+
+            <Spinner
+                android:id="@+id/spinnerTitle"
+                android:layout_width="0px"
+                android:layout_gravity="center_vertical|fill_horizontal"
+                android:layout_weight="0.7" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+
+            <TextView
+                android:id="@+id/textViewGender"
+                android:layout_width="0px"
+                android:layout_gravity="center_vertical|left"
+                android:layout_weight="0.3"
+                android:text="@string/gender" />
+
+            <Spinner
+                android:id="@+id/spinnerGender"
+                android:layout_width="0px"
+                android:layout_gravity="center_vertical|fill_horizontal"
+                android:layout_weight="0.7" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+
+            <TextView
+                android:id="@+id/textViewBirthDate"
+                android:layout_width="0px"
+                android:layout_gravity="center_vertical|left"
+                android:layout_weight="0.3"
+                android:text="@string/birthdate" />
+
+            <EditText
+                android:id="@+id/editTextBirthDate"
+                android:layout_width="0px"
+                android:layout_gravity="center_vertical|fill_horizontal"
+                android:layout_weight="0.7"
+                android:ems="10"
+                android:inputType="date" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+
+            <TextView
+                android:id="@+id/textViewIC"
+                android:layout_width="0px"
+                android:layout_gravity="center_vertical|left"
+                android:layout_weight="0.3"
+                android:text="@string/ic" />
+
+            <EditText
+                android:id="@+id/editTextIC"
+                android:layout_width="0px"
+                android:layout_gravity="center_vertical|fill_horizontal"
+                android:layout_weight="0.7"
+                android:ems="10"
+                android:inputType="text" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingTop="@dimen/activity_vertical_margin" >
+
+            <View
+                android:layout_width="0px"
+                android:layout_height="1dip"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:background="?android:attr/dividerVertical" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+
+            <Button
+                android:id="@+id/buttonUpdate"
+                android:layout_width="0px"
+                android:layout_gravity="center_vertical|left"
+                android:layout_weight="0.45"
+                android:background="?android:attr/selectableItemBackground"
+                android:onClick="onClick"
+                android:text="@string/update" />
+
+            <View
+                android:layout_width="1dip"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:background="?android:attr/dividerVertical" />
+
+            <Button
+                android:id="@+id/buttonCancel"
+                android:layout_width="0px"
+                android:layout_gravity="center_vertical|right"
+                android:layout_weight="0.45"
+                android:background="?android:attr/selectableItemBackground"
+                android:onClick="onClick"
+                android:text="@string/cancel" />
+        </TableRow>
+    </TableLayout>
+
+</ScrollView>
