--- a/AMPS/res/layout/fragment_profile_password.xml
+++ b/AMPS/res/layout/fragment_profile_password.xml
@@ -1,65 +1,96 @@
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:columnCount="3"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     tools:context=".ProfilePasswordFragment" >
 
-    <TextView
-        android:id="@+id/textViewNewPassword"
-        android:layout_column="0"
-        android:layout_columnSpan="1"
-        android:layout_gravity="left|top"
-        android:layout_row="0"
-        android:text="@string/newpassword" />
+    <TableLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin" >
 
-    <EditText
-        android:id="@+id/editTextNewPassword"
-        android:layout_column="1"
-        android:layout_columnSpan="2"
-        android:layout_gravity="fill_horizontal"
-        android:layout_row="0"
-        android:ems="10"
-        android:inputType="textPassword" />
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
 
-    <TextView
-        android:id="@+id/textViewVerifyPassword"
-        android:layout_column="0"
-        android:layout_columnSpan="1"
-        android:layout_gravity="left|top"
-        android:layout_row="1"
-        android:text="@string/verifypassword" />
+            <TextView
+                android:id="@+id/textViewNewPassword"
+                android:layout_width="0px"
+                android:layout_gravity="center_vertical|left"
+                android:layout_weight="0.3"
+                android:text="@string/newpassword" />
 
-    <EditText
-        android:id="@+id/editTextVerifyPassword"
-        android:layout_column="1"
-        android:layout_columnSpan="2"
-        android:layout_gravity="fill_horizontal"
-        android:layout_row="1"
-        android:ems="10"
-        android:inputType="textPassword" />
+            <EditText
+                android:id="@+id/editTextNewPassword"
+                android:layout_width="0px"
+                android:layout_gravity="center_vertical|fill_horizontal"
+                android:layout_weight="0.7"
+                android:ems="10"
+                android:inputType="textPassword" />
+        </TableRow>
 
-    <Button
-        android:id="@+id/buttonUpdate"
-        android:layout_column="0"
-        android:layout_columnSpan="3"
-    	android:layout_width="match_parent"
-        android:layout_row="2"
-        android:text="@string/update" >
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
 
-        <requestFocus />
-    </Button>
+            <TextView
+                android:id="@+id/textViewVerifyPassword"
+                android:layout_width="0px"
+                android:layout_gravity="center_vertical|left"
+                android:layout_weight="0.3"
+                android:text="@string/verifypassword" />
 
-    <Button
-        android:id="@+id/buttonCancel"
-        android:layout_column="0"
-        android:layout_columnSpan="3"
-    android:layout_width="match_parent"
-        android:layout_row="3"
-        android:text="@string/cancel" />
+            <EditText
+                android:id="@+id/editTextVerifyPassword"
+                android:layout_width="0px"
+                android:layout_gravity="center_vertical|fill_horizontal"
+                android:layout_weight="0.7"
+                android:ems="10"
+                android:inputType="textPassword" />
+        </TableRow>
 
-</GridLayout>
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingTop="@dimen/activity_vertical_margin" >
+
+            <View
+                android:layout_width="0px"
+                android:layout_height="1dip"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:background="?android:attr/dividerVertical" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+
+            <Button
+                android:id="@+id/buttonUpdate"
+                android:layout_width="0px"
+                android:layout_gravity="center_vertical|left"
+                android:layout_weight="0.45"
+                android:background="?android:attr/selectableItemBackground"
+                android:text="@string/update" />
+
+            <View
+                android:layout_width="1dip"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:background="?android:attr/dividerVertical" />
+
+            <Button
+                android:id="@+id/buttonCancel"
+                android:layout_width="0px"
+                android:layout_gravity="center_vertical|right"
+                android:layout_weight="0.45"
+                android:background="?android:attr/selectableItemBackground"
+                android:text="@string/cancel" />
+        </TableRow>
+    </TableLayout>
+
+</ScrollView>
