--- a/AMPS/res/layout/fragment_profile_settings.xml
+++ b/AMPS/res/layout/fragment_profile_settings.xml
@@ -1,83 +1,118 @@
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:columnCount="2"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     tools:context=".ProfileSettingsFragment" >
 
-    <TextView
-        android:id="@+id/textViewNoOfProjectsToDisplay"
-        android:layout_column="0"
-        android:layout_columnSpan="1"
-        android:layout_gravity="left|top"
-        android:layout_row="0"
-        android:text="@string/noofprojectstodisplay" />
-
-    <Spinner
-        android:id="@+id/spinnerNoOfProjectsToDisplay"
-        android:layout_width="wrap_content"
-        android:layout_column="1"
-        android:layout_columnSpan="1"
-        android:layout_gravity="left|top"
-        android:layout_row="0"
-        android:entries="@array/number1to10" />
-
-    <TextView
-        android:id="@+id/textViewNoOfAssetsToDisplay"
-        android:layout_column="0"
-        android:layout_columnSpan="1"
-        android:layout_gravity="left|top"
-        android:layout_row="1"
-        android:text="@string/noofassetstodisplay" />
-
-    <Spinner
-        android:id="@+id/spinnerNoOfAssetsToDisplay"
-        android:layout_width="wrap_content"
-        android:layout_column="1"
-        android:layout_columnSpan="1"
-        android:layout_gravity="left|top"
-        android:layout_row="1"
-        android:entries="@array/number1to10" />
-
-    <CheckBox
-        android:id="@+id/checkBoxAutoPreviewAssets"
-        android:layout_column="0"
-        android:layout_columnSpan="2"
-        android:layout_gravity="left|top"
-        android:layout_row="2"
-        android:text="@string/autopreviewassets" />
-
-    <CheckBox
-        android:id="@+id/checkBoxRequireChangePassword"
-        android:layout_column="0"
-        android:layout_columnSpan="2"
-        android:layout_gravity="left|top"
-        android:layout_row="3"
-        android:text="@string/requirechangepassword" />
-
-    <Button
-        android:id="@+id/buttonUpdate"
+    <TableLayout
         android:layout_width="match_parent"
-        android:layout_column="0"
-        android:layout_columnSpan="2"
-        android:layout_gravity="left|top"
-        android:layout_row="4"
-        android:text="@string/update" >
+        android:layout_height="wrap_content"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin" >
 
-        <requestFocus />
-    </Button>
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
 
-    <Button
-        android:id="@+id/buttonCancel"
-        android:layout_width="match_parent"
-        android:layout_column="0"
-        android:layout_columnSpan="2"
-        android:layout_gravity="left|top"
-        android:layout_row="5"
-        android:text="@string/cancel" />
+            <TextView
+                android:id="@+id/textViewNoOfProjectsToDisplay"
+                android:layout_width="0px"
+                android:layout_gravity="center_vertical|left"
+                android:layout_weight="0.5"
+                android:text="@string/noofprojectstodisplay" />
 
-</GridLayout>
+            <Spinner
+                android:id="@+id/spinnerNoOfProjectsToDisplay"
+                android:layout_width="0px"
+                android:layout_gravity="center_vertical|fill_horizontal"
+                android:layout_weight="0.5"
+                android:entries="@array/number1to10" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+
+            <TextView
+                android:id="@+id/textViewNoOfAssetsToDisplay"
+                android:layout_width="0px"
+                android:layout_gravity="center_vertical|left"
+                android:layout_weight="0.5"
+                android:text="@string/noofassetstodisplay" />
+
+            <Spinner
+                android:id="@+id/spinnerNoOfAssetsToDisplay"
+                android:layout_width="0px"
+                android:layout_gravity="center_vertical|fill_horizontal"
+                android:layout_weight="0.5"
+                android:entries="@array/number1to10" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+
+            <CheckBox
+                android:id="@+id/checkBoxAutoPreviewAssets"
+                android:layout_width="0px"
+                android:layout_gravity="center_vertical|left"
+                android:layout_weight="1"
+                android:text="@string/autopreviewassets" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+
+            <CheckBox
+                android:id="@+id/checkBoxRequireChangePassword"
+                android:layout_width="0px"
+                android:layout_gravity="center_vertical|left"
+                android:layout_weight="1"
+                android:text="@string/requirechangepassword" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingTop="@dimen/activity_vertical_margin" >
+
+            <View
+                android:layout_width="0px"
+                android:layout_height="1dip"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:background="?android:attr/dividerVertical" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+
+            <Button
+                android:id="@+id/buttonUpdate"
+                android:layout_width="0px"
+                android:layout_gravity="center_vertical|left"
+                android:layout_weight="0.45"
+                android:background="?android:attr/selectableItemBackground"
+                android:text="@string/update" />
+
+            <View
+                android:layout_width="1dip"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:background="?android:attr/dividerVertical" />
+
+            <Button
+                android:id="@+id/buttonCancel"
+                android:layout_width="0px"
+                android:layout_gravity="center_vertical|right"
+                android:layout_weight="0.45"
+                android:background="?android:attr/selectableItemBackground"
+                android:text="@string/cancel" />
+        </TableRow>
+    </TableLayout>
+
+</ScrollView>
