--- a/AMPS/res/layout/fragment_project_information.xml
+++ b/AMPS/res/layout/fragment_project_information.xml
@@ -1,252 +1,306 @@
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:columnCount="3"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     tools:context=".ProjectInformationFragment" >
 
-    <TextView
-        android:id="@+id/textViewProjectName"
-        android:layout_column="0"
-        android:layout_columnSpan="1"
-        android:layout_gravity="center_vertical|left"
-        android:layout_row="0"
-        android:text="@string/projectname" />
-
-    <EditText
-        android:id="@+id/editTextProjectName"
-        android:layout_column="1"
-        android:layout_columnSpan="2"
-        android:layout_gravity="fill_horizontal"
-        android:layout_row="0"
-        android:ems="10"
-        android:inputType="text" />
-
-    <TextView
-        android:id="@+id/textViewProjectType"
-        android:layout_column="0"
-        android:layout_columnSpan="1"
-        android:layout_gravity="center_vertical|left"
-        android:layout_row="1"
-        android:text="@string/projecttype" />
-
-    <Spinner
-        android:id="@+id/spinnerProjectType"
-        android:layout_width="310dp"
-        android:layout_column="1"
-        android:layout_columnSpan="2"
-        android:layout_gravity="left|top"
-        android:layout_row="1"
-        android:entries="@array/projecttypevalue" />
-
-    <TextView
-        android:id="@+id/textViewProjectStatus"
-        android:layout_column="0"
-        android:layout_columnSpan="1"
-        android:layout_gravity="center_vertical|left"
-        android:layout_row="2"
-        android:text="@string/projectstatus" />
-
-    <Spinner
-        android:id="@+id/spinnerProjectStatus"
-        android:layout_width="310dp"
-        android:layout_column="1"
-        android:layout_columnSpan="2"
-        android:layout_gravity="left|top"
-        android:layout_row="2"
-        android:entries="@array/projectstatusvalue" />
-
-    <TextView
-        android:id="@+id/textViewClient"
-        android:layout_column="0"
-        android:layout_columnSpan="1"
-        android:layout_gravity="center_vertical|left"
-        android:layout_row="3"
-        android:text="@string/client" />
-
-    <Spinner
-        android:id="@+id/spinnerClient"
-        android:layout_width="310dp"
-        android:layout_column="1"
-        android:layout_columnSpan="2"
-        android:layout_gravity="left|top"
-        android:layout_row="3"
-        android:entries="@array/clientvalue" />
-
-    <TextView
-        android:id="@+id/textViewEstimatedStart"
-        android:layout_column="0"
-        android:layout_columnSpan="1"
-        android:layout_gravity="center_vertical|left"
-        android:layout_row="4"
-        android:text="@string/estimatedstart" />
-
-    <EditText
-        android:id="@+id/editTextEstimatedStart"
-        android:layout_column="1"
-        android:layout_columnSpan="2"
-        android:layout_gravity="fill_horizontal"
-        android:layout_row="4"
-        android:ems="10"
-        android:inputType="date" />
-
-    <TextView
-        android:id="@+id/textViewEstimatedEnd"
-        android:layout_column="0"
-        android:layout_columnSpan="1"
-        android:layout_gravity="center_vertical|left"
-        android:layout_row="5"
-        android:text="@string/estimatedend" />
-
-    <EditText
-        android:id="@+id/editTextEstimatedEnd"
-        android:layout_column="1"
-        android:layout_columnSpan="2"
-        android:layout_gravity="fill_horizontal"
-        android:layout_row="5"
-        android:ems="10"
-        android:inputType="date" />
-
-    <TextView
-        android:id="@+id/textViewEstimatedDuration"
-        android:layout_column="0"
-        android:layout_columnSpan="1"
-        android:layout_gravity="center_vertical|left"
-        android:layout_row="6"
-        android:text="@string/estimatedduration" />
-
-    <EditText
-        android:id="@+id/editTextEstimatedDuration"
-        android:layout_column="1"
-        android:layout_columnSpan="2"
-        android:layout_gravity="fill_horizontal"
-        android:layout_row="6"
-        android:ems="10"
-        android:inputType="number" />
-
-    <TextView
-        android:id="@+id/textviewActualStart"
-        android:layout_column="0"
-        android:layout_columnSpan="1"
-        android:layout_gravity="center_vertical|left"
-        android:layout_row="7"
-        android:text="@string/actualstart" />
-
-    <EditText
-        android:id="@+id/editTextActualStart"
-        android:layout_column="1"
-        android:layout_columnSpan="2"
-        android:layout_gravity="fill_horizontal"
-        android:layout_row="7"
-        android:ems="10"
-        android:inputType="date" />
-
-    <TextView
-        android:id="@+id/textViewActualEnd"
-        android:layout_column="0"
-        android:layout_columnSpan="1"
-        android:layout_gravity="center_vertical|left"
-        android:layout_row="8"
-        android:text="@string/actualend" />
-
-    <EditText
-        android:id="@+id/editTextActualEnd"
-        android:layout_column="1"
-        android:layout_columnSpan="2"
-        android:layout_gravity="fill_horizontal"
-        android:layout_row="8"
-        android:ems="10"
-        android:inputType="date" />
-
-    <TextView
-        android:id="@+id/textViewActualDuration"
-        android:layout_column="0"
-        android:layout_columnSpan="1"
-        android:layout_gravity="center_vertical|left"
-        android:layout_row="9"
-        android:text="@string/actualduration" />
-
-    <EditText
-        android:id="@+id/editTextActualDuration"
-        android:layout_column="1"
-        android:layout_columnSpan="2"
-        android:layout_gravity="fill_horizontal"
-        android:layout_row="9"
-        android:ems="10"
-        android:inputType="number" />
-
-    <TextView
-        android:id="@+id/textViewDescription"
-        android:layout_column="0"
-        android:layout_columnSpan="1"
-        android:layout_gravity="center_vertical|left"
-        android:layout_row="10"
-        android:text="@string/description" />
-
-    <EditText
-        android:id="@+id/editTextDescription"
-        android:layout_column="1"
-        android:layout_columnSpan="2"
-        android:layout_gravity="fill_horizontal"
-        android:layout_row="10"
-        android:ems="10"
-        android:inputType="textMultiLine" />
-
-    <TextView
-        android:id="@+id/textViewCreatedBy"
-        android:layout_column="0"
-        android:layout_columnSpan="3"
-        android:layout_gravity="center_vertical|left"
-        android:layout_row="11"
-        android:text="@string/createdby" />
-
-    <TextView
-        android:id="@+id/textViewCreationDate"
-        android:layout_column="0"
-        android:layout_columnSpan="3"
-        android:layout_gravity="center_vertical|left"
-        android:layout_row="12"
-        android:text="@string/creationdate" />
-
-    <TextView
-        android:id="@+id/textViewLastUpdatedBy"
-        android:layout_column="0"
-        android:layout_columnSpan="3"
-        android:layout_gravity="center_vertical|left"
-        android:layout_row="13"
-        android:text="@string/lastupdatedby" />
-
-    <TextView
-        android:id="@+id/textViewLastUpdatedDate"
-        android:layout_column="0"
-        android:layout_columnSpan="3"
-        android:layout_gravity="center_vertical|left"
-        android:layout_row="14"
-        android:text="@string/lastupdatedon" />
-
-    <Button
-        android:id="@+id/buttonUpdate"
+    <TableLayout
         android:layout_width="match_parent"
-        android:layout_column="0"
-        android:layout_columnSpan="3"
-        android:layout_gravity="left|top"
-        android:layout_row="15"
-        android:text="@string/update" >
+        android:layout_height="wrap_content"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin" >
 
-        <requestFocus />
-    </Button>
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
 
-    <Button
-        android:id="@+id/buttonCancel"
-        android:layout_width="match_parent"
-        android:layout_column="0"
-        android:layout_columnSpan="3"
-        android:layout_gravity="left|top"
-        android:layout_row="16"
-        android:text="@string/cancel" />
+            <TextView
+                android:id="@+id/textViewProjectName"
+                android:layout_width="0px"
+                android:layout_gravity="center_vertical|left"
+                android:layout_weight="0.3"
+                android:text="@string/projectname" />
 
-</GridLayout>
+            <EditText
+                android:id="@+id/editTextProjectName"
+                android:layout_width="0px"
+                android:layout_gravity="center_vertical|fill_horizontal"
+                android:layout_weight="0.7"
+                android:ems="10"
+                android:inputType="text" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+
+            <TextView
+                android:id="@+id/textViewProjectType"
+                android:layout_width="0px"
+                android:layout_gravity="center_vertical|left"
+                android:layout_weight="0.3"
+                android:text="@string/projecttype" />
+
+            <Spinner
+                android:id="@+id/spinnerProjectType"
+                android:layout_width="0px"
+                android:layout_gravity="left|top"
+                android:layout_weight="0.7"
+                android:entries="@array/projecttypevalue" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+
+            <TextView
+                android:id="@+id/textViewProjectStatus"
+                android:layout_width="0px"
+                android:layout_gravity="center_vertical|left"
+                android:layout_weight="0.3"
+                android:text="@string/projectstatus" />
+
+            <Spinner
+                android:id="@+id/spinnerProjectStatus"
+                android:layout_width="0px"
+                android:layout_gravity="left|top"
+                android:layout_weight="0.7"
+                android:entries="@array/projectstatusvalue" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+
+            <TextView
+                android:id="@+id/textViewClient"
+                android:layout_width="0px"
+                android:layout_gravity="center_vertical|left"
+                android:layout_weight="0.3"
+                android:text="@string/client" />
+
+            <Spinner
+                android:id="@+id/spinnerClient"
+                android:layout_width="0px"
+                android:layout_gravity="left|top"
+                android:layout_weight="0.7"
+                android:entries="@array/clientvalue" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+
+            <TextView
+                android:id="@+id/textViewEstimatedStart"
+                android:layout_width="0px"
+                android:layout_gravity="center_vertical|left"
+                android:layout_weight="0.3"
+                android:text="@string/estimatedstart" />
+
+            <EditText
+                android:id="@+id/editTextEstimatedStart"
+                android:layout_width="0px"
+                android:layout_weight="0.7"
+                android:ems="10"
+                android:inputType="date" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+
+            <TextView
+                android:id="@+id/textViewEstimatedEnd"
+                android:layout_width="0px"
+                android:layout_gravity="center_vertical|left"
+                android:layout_weight="0.3"
+                android:text="@string/estimatedend" />
+
+            <EditText
+                android:id="@+id/editTextEstimatedEnd"
+                android:layout_width="0px"
+                android:layout_weight="0.7"
+                android:ems="10"
+                android:inputType="date" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+
+            <TextView
+                android:id="@+id/textViewEstimatedDuration"
+                android:layout_width="0px"
+                android:layout_gravity="center_vertical|left"
+                android:layout_weight="0.3"
+                android:text="@string/estimatedduration" />
+
+            <EditText
+                android:id="@+id/editTextEstimatedDuration"
+                android:layout_width="0px"
+                android:layout_weight="0.7"
+                android:ems="10"
+                android:inputType="number" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+
+            <TextView
+                android:id="@+id/textviewActualStart"
+                android:layout_width="0px"
+                android:layout_gravity="center_vertical|left"
+                android:layout_weight="0.3"
+                android:text="@string/actualstart" />
+
+            <EditText
+                android:id="@+id/editTextActualStart"
+                android:layout_width="0px"
+                android:layout_weight="0.7"
+                android:ems="10"
+                android:inputType="date" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+
+            <TextView
+                android:id="@+id/textViewActualEnd"
+                android:layout_width="0px"
+                android:layout_gravity="center_vertical|left"
+                android:layout_weight="0.3"
+                android:text="@string/actualend" />
+
+            <EditText
+                android:id="@+id/editTextActualEnd"
+                android:layout_width="0px"
+                android:layout_weight="0.7"
+                android:ems="10"
+                android:inputType="date" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+
+            <TextView
+                android:id="@+id/textViewActualDuration"
+                android:layout_width="0px"
+                android:layout_gravity="center_vertical|left"
+                android:layout_weight="0.3"
+                android:text="@string/actualduration" />
+
+            <EditText
+                android:id="@+id/editTextActualDuration"
+                android:layout_width="0px"
+                android:layout_weight="0.7"
+                android:ems="10"
+                android:inputType="number" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+
+            <TextView
+                android:id="@+id/textViewDescription"
+                android:layout_width="0px"
+                android:layout_gravity="center_vertical|left"
+                android:layout_weight="0.3"
+                android:text="@string/description" />
+
+            <EditText
+                android:id="@+id/editTextDescription"
+                android:layout_width="0px"
+                android:layout_weight="0.7"
+                android:ems="10"
+                android:inputType="textMultiLine" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+
+            <TextView
+                android:id="@+id/textViewCreatedBy"
+                android:layout_gravity="center_vertical|left"
+                android:text="@string/createdby" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+
+            <TextView
+                android:id="@+id/textViewCreationDate"
+                android:layout_gravity="center_vertical|left"
+                android:text="@string/creationdate" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+
+            <TextView
+                android:id="@+id/textViewLastUpdatedBy"
+                android:layout_gravity="center_vertical|left"
+                android:text="@string/lastupdatedby" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+
+            <TextView
+                android:id="@+id/textViewLastUpdatedDate"
+                android:layout_gravity="center_vertical|left"
+                android:text="@string/lastupdatedon" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingTop="@dimen/activity_vertical_margin" >
+
+            <View
+                android:layout_width="0px"
+                android:layout_height="1dip"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:background="?android:attr/dividerVertical" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+
+            <Button
+                android:id="@+id/buttonUpdate"
+                android:layout_width="0px"
+                android:layout_gravity="center_vertical|left"
+                android:layout_weight="0.45"
+                android:background="?android:attr/selectableItemBackground"
+                android:text="@string/update" />
+
+            <View
+                android:layout_width="1dip"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:background="?android:attr/dividerVertical" />
+
+            <Button
+                android:id="@+id/buttonCancel"
+                android:layout_width="0px"
+                android:layout_gravity="center_vertical|right"
+                android:layout_weight="0.45"
+                android:background="?android:attr/selectableItemBackground"
+                android:text="@string/cancel" />
+        </TableRow>
+    </TableLayout>
+
+</ScrollView>
